--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Resumable, chunked uploads to Google Cloud Storage from the browser",
   "main": "src/Upload.js",
   "scripts": {
-    "test": "make test",
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -12,9 +12,6 @@
   },
   "author": "Qubit",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/qubitdigital/gcs-browser-upload/issues"
-  },
   "homepage": "https://github.com/qubitdigital/gcs-browser-upload#readme",
   "devDependencies": {
     "babel-cli": "^6.14.0",
