--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "gcs-browser-upload",
   "version": "1.0.0",
   "description": "Resumable, chunked uploads to Google Cloud Storage from the browser",
-  "main": "src/Upload.js",
-  "scripts": {
-    "test": "make test"
+  "main": "dist/Upload.js",
+   "scripts": {
+    "test": "make test",
+    "compile": "make compile",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -41,6 +43,7 @@
   },
   "dependencies": {
     "axios": "^0.9.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "debug": "^2.2.0",
     "es6-error": "^2.1.0",
     "es6-promise": "^3.1.2",
